<resources>
    <string name="app_name">Vehicle Ticket Tracker</string>
    <string name="stock">Stock</string>
    <string name="year">Year</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="color">Color</string>
    <string name="hours">Hours</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="clear_db">Clear DB</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="generate_vehicle">Generate Vehicle</string>
</resources>
