<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="5dp">


    <EditText
        android:id="@+id/et_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/stock" />

    <EditText
        android:id="@+id/et_year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_stock"
        android:gravity="center"
        android:hint="@string/year" />

    <EditText
        android:id="@+id/et_make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_year"
        android:gravity="center"
        android:hint="@string/make" />

    <EditText
        android:id="@+id/et_model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_make"
        android:gravity="center"
        android:hint="@string/model" />

    <EditText
        android:id="@+id/et_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_model"
        android:gravity="center"
        android:hint="@string/color" />

    <EditText
        android:id="@+id/et_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_color"
        android:gravity="center"
        android:hint="@string/hours" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_hours"
        android:layout_marginTop="10dp"
        android:weightSum="2">


        <Button
            android:id="@+id/btn_cancel"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_save"
            style="?android:buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/save" />
    </LinearLayout>
</RelativeLayout>